js/js.translator/testData/incremental/invalidation/fileNameClashPerModule/lib/f2.2.kt
@file:JsFileName("f1")

package foo

@JsExport
fun test2() = "OK"